Map widget position is relative to window size to prevent it from going off-screen on resize.

--- a/teleop-vue/src/views/TeleopView/TeleopView.scss
+++ b/teleop-vue/src/views/TeleopView/TeleopView.scss
@@ -66,7 +66,7 @@
   right: 0px;
   bottom: 0px;
   margin: 1.5rem;
-  z-index: 3;
+  z-index: 4;
 }
 
 .center-left {
